--- a/index.html
+++ b/index.html
@@ -6,14 +6,71 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="import" href="navbar.html">
+  <link rel="stylesheet" type="text/css" href="index.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="mycss/index.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
 
-  <h1>La antigua roma-- wuu</h1>
+  <!--NAVBAR-->
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary p-navbar-coler">
+    <a class="navbar-brand" href="#">Chemwrite</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.php">Inicio<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="documentacion.php">Documentación</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Óxidos
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="oxido-basico.php">Óxidos básicos</a>
+            <a class="dropdown-item" href="hidroxido.php">Hidróxidos</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Ácidos
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="oxido-acido.php">Oxidos ácidos</a>
+            <a class="dropdown-item" href="hidracido.php">Hidácidos</a>
+            <a class="dropdown-item" href="oxoacido.php">Oxoácidos</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Sales
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="oxisal.php">Oxisales</a>
+            <a class="dropdown-item" href="#">Haloideas</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <form class="form-inline">
+      <input class="form-control mr-sm-2" type="search" placeholder="buscar" aria-label="Search">
+      <button class="btn btn-success my-2 my-sm-2" type="submit">Ir</button>
+    </form>
+  </nav>
+
+  <br>
+  <br>
+  <br>
+  <!--FIN NAVBAR-->
+
+  <canvas id="lienzo" height="400" width="500"></canvas>
+
 
   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
